more tasks and edits

--- a/jsdom2/13 - keycode-challenge/index.html
+++ b/jsdom2/13 - keycode-challenge/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="main">Press any to see the event KeyCode
-        <div class="output"></div>
+        <div class="output">Ready?</div>
         <div class="event">
             <div class="heading" id="event-key">Event Key
                 <div class="output-box" id="event-key-txt">OUTPUT</div>
