more tasks and edits

--- a/jsdom2/13 - keycode-challenge/index.html
+++ b/jsdom2/13 - keycode-challenge/index.html
@@ -8,7 +8,8 @@
     <title>Keycode</title>
 </head>
 <body>
-    <div class="main">Press any to see the event KeyCode
+    <div class="main">
+        <h2>Press any key to see the event KeyCode</h2>
         <div class="output">Ready?</div>
         <div class="event">
             <div class="heading" id="event-key">Event Key
