--- a/jsdom2/13 - keycode-challenge/index.html
+++ b/jsdom2/13 - keycode-challenge/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Genos:wght@500&display=swap" rel="stylesheet">
     <title>Keycode</title>
 </head>
 <body>
     <div class="main">
-        <h2>Press any key to see the event KeyCode</h2>
+        <div class="text">Press any key to see the Event KeyCode</div>
         <div class="output">Ready?</div>
         <div class="event">
             <div class="heading" id="event-key">Event Key
